crates/analyzer/tests/snapshots/errors__traits_with_wrong_bounds.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: unbounded generic parameters aren't yet supported
  ┌─ compile_errors/traits_with_wrong_bounds.fe:4:22
  │
4 │     pub fn no_bounds<T>(val: T) {}
  │                      ^ `T` needs to be bound by some trait
  │
  = Hint: Change `T` to `T: SomeTrait`


